sizing on mobile fixed

--- a/18giorni/style.css
+++ b/18giorni/style.css
@@ -51,12 +51,12 @@
 .background {
     background-color: black;
     display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .container{
     margin: auto;
-    width: 3840px;
-    height: 2160px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
